feat(ui): add interactive task creation with validation
Prompt and validate each field step-by-step before instantiating
AcademicTask and persisting to store.